# Receiver/openapi.yml
@@ -10,6 +10,36 @@ tags:
   - name: books
     description: Operations available for books
 paths:
+
+  /health:
+    get:
+      tags:
+        - service health
+      summary: gets array of all book withdrawals
+      operationId: app.get_health
+      description: Returns the health of the service
+      responses:
+        '200':
+          description: Service is healthy
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '400':
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+
+
+
   /books/withdrawal:
     post:
       tags:
